[gd_scene load_steps=3 format=3 uid="uid://b4c105b3jd8a8"]

[ext_resource type="Script" path="res://player_interaction.gd" id="1_qf4sp"]
[ext_resource type="Texture2D" uid="uid://dvbfdyrl8lg37" path="res://inventory9patch.png" id="2_mr5kh"]

[node name="PlayerInteractionUI" type="CanvasLayer"]
script = ExtResource("1_qf4sp")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestListPanel" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="OtherPlayerContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestListPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestListPanel/OtherPlayerContainer"]
light_mask = 0
layout_mode = 2
texture = ExtResource("2_mr5kh")
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 23
patch_margin_bottom = 22
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestListPanel/OtherPlayerContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 23

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestListPanel/OtherPlayerContainer/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestListPanel/OtherPlayerContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Quests"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestListPanel/OtherPlayerContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OtherPlayerTrades" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestListPanel/OtherPlayerContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestDetailsPanel" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="OtherPlayerContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestDetailsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestDetailsPanel/OtherPlayerContainer"]
light_mask = 0
layout_mode = 2
texture = ExtResource("2_mr5kh")
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 23
patch_margin_bottom = 22
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestDetailsPanel/OtherPlayerContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 23

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestDetailsPanel/OtherPlayerContainer/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestDetailsPanel/OtherPlayerContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Quest Details"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestDetailsPanel/OtherPlayerContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OtherPlayerTrades" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/QuestDetailsPanel/OtherPlayerContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OtherPlayerPanel" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/OtherPlayerPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/OtherPlayerPanel/MarginContainer"]
light_mask = 0
layout_mode = 2
texture = ExtResource("2_mr5kh")
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 23
patch_margin_bottom = 22
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/OtherPlayerPanel/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 23

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/OtherPlayerPanel/MarginContainer/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/OtherPlayerPanel/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Other Player Items"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/OtherPlayerPanel/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OtherPlayerTrades" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/OtherPlayerPanel/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MyTradesPanel" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MyTradesContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel/MyTradesContainer"]
show_behind_parent = true
light_mask = 0
layout_mode = 2
texture = ExtResource("2_mr5kh")
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 23
patch_margin_bottom = 22
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel/MyTradesContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 23

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel/MyTradesContainer/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="My Trades" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel/MyTradesContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "My  Items"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel/MyTradesContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MyTrades" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel/MyTradesContainer/NinePatchRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MyItemsPanel" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer"]
show_behind_parent = true
light_mask = 0
layout_mode = 2
texture = ExtResource("2_mr5kh")
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 23
patch_margin_bottom = 22
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 23

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "My Inventory"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MyInventory" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
z_index = 1
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Accept" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Accept"

[node name="Control" type="Control" parent="Panel"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ButtonsContainer/Accept" to="." method="_on_accept_pressed"]
